--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: panda-dock
 Section: x11
 Priority: optional
 Maintainer: Rekols <rekols@foxmail.com>
-Build-Depends: debhelper (>= 9), cmake, extra-cmake-modules, qtbase5-dev, qttools5-dev, g++, qt5-default, qttools5-dev-tools, libqt5x11extras5-dev, libqt5svg5-dev, libxtst-dev, libkf5windowsystem-dev
+Build-Depends: debhelper (>= 9), pkgconf, cmake, extra-cmake-modules, qtbase5-dev, qttools5-dev, g++, qt5-default, qttools5-dev-tools, libqt5x11extras5-dev, libqt5svg5-dev, libxtst-dev, libkf5windowsystem-dev
 Standards-Version: 3.9.8
 Homepage: https://github.com/pandaos
 
