Support empty trash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(HEADERS mainpanel.h mainwindow.h appscrollarea.h)
 set(FORMS "")
 set(RESOURCES resources.qrc)
 
-set(QT Core Gui Widgets Svg X11Extras)
+set(QT Core Gui Widgets DBus Svg X11Extras)
 find_package(Qt5 REQUIRED ${QT})
 find_package(PkgConfig REQUIRED)
 
@@ -36,6 +36,7 @@ target_link_libraries(${TARGET}
         Qt5::Core
         Qt5::Gui
         Qt5::Widgets
+        Qt5::DBus
         Qt5::Svg
         Qt5::X11Extras
         KF5::WindowSystem
